// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list with elements correctly 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Tag Types
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <button
        aria-describedby={null}
        aria-label="add tag type"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Add tag type"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            add
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root"
        >
          label
        </span>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <a
            href="/tag-types/edit/simple"
            onClick={[Function]}
          >
            <strong>
              simple
            </strong>
          </a>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          Some simple description
        </p>
      </div>
      <button
        aria-describedby={null}
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Delete simple"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            delete
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders an empty list correctly 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Tag Types
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <button
        aria-describedby={null}
        aria-label="add tag type"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Add tag type"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            add
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      No entries
    </li>
  </ul>
</div>
`;
